# sayonara

./: .gitignore  README.md  README_TAURI_SETUP.md  chatbot.js  chatbot1.js  index.html  makefile  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  test.sh  vite.config.js
blockchain/: README.md  hardhat.config.ts  package-lock.json  (+1 more)
core/: .gitignore  Cargo.toml  README.md  test.sh
core/src/: lib.rs  main.rs  wipe_orchestrator.rs
core/src/algorithms/: dod.rs  gutmann.rs  gutmann_test.rs  mod.rs  random.rs  zero.rs
core/src/crypto/: certificates.rs  mod.rs  secure_rng.rs  secure_rng_tests.rs
core/src/drives/: detection.rs  freeze.rs  hdd.rs  hybrid.rs  integrated_wipe.rs  mod.rs  optane.rs  sed.rs  smart.rs  smr.rs  ssd.rs  trim.rs
core/src/drives/freeze/: README.md  advanced.rs  detection.rs  mod.rs  tests.rs
core/src/drives/freeze/kernel_module/: Makefile  README.md  ata_unfreeze.c
core/src/drives/freeze/strategies/: kernel_module.rs  mod.rs  remaining_impl.rs  sata_link_reset.rs  vendor_specific.rs
core/src/drives/operations/: hpa_dco.rs  mod.rs  smart.rs  trim.rs
core/src/drives/types/: emmc.rs  hybrid.rs  mod.rs  raid.rs  smr.rs  ssd.rs
core/src/drives/types/nvme/: advanced.rs  basic.rs  mod.rs
core/src/io/: README.md  buffer_pool.rs  io_uring_engine.rs  metrics.rs  mmap_engine.rs  mod.rs  optimized_engine.rs  platform_specific.rs  tests.rs
core/src/ui/: progress.rs
core/src/verification/: README.md  enhanced.rs  enhanced_tests.rs  mod.rs  recovery_test.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+108 files in other folders)
